@@ -6,6 +6,7 @@ thecl: The special syntax for encrypted strings was removed.
 thdat: Support for TH13 has been added.
 thmsg: Support for TH13 has been added.
 thanm: Support for TH13 has been added.
+thecl: Support for TH13 has been added.
 
 What's new in thtk 3:
 
